--- a/package.json
+++ b/package.json
@@ -12,8 +12,16 @@
   "dependencies": {
     "rework-visit": "1.0.0"
   },
+  "devDependencies": {
+    "mocha": "~1.14.0",
+    "should": "~2.1.0",
+    "rework": "~0.18.3"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/visionmedia/rework-vars.git"
+  },
+  "scripts": {
+    "test": "./node_modules/.bin/mocha --slow 30 --reporter spec"
   }
 }
