--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "url": "https://github.com/visionmedia/rework-vars.git"
   },
   "scripts": {
-    "test": "./node_modules/.bin/mocha --slow 30 --reporter spec"
+    "test": "./node_modules/.bin/mocha --no-colors"
   }
 }
