--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "rework-visit": "1.0.0"
+    "rework-visit": "1.0.0",
+    "balanced-match": "~0.1.0"
   },
   "devDependencies": {
     "mocha": "~1.14.0",
